--- a/src/main/resources/assets/lulw/lang/en_us.json
+++ b/src/main/resources/assets/lulw/lang/en_us.json
@@ -7,5 +7,6 @@
   "block.lulw.copper_ore": "Copper Ore",
   "block.lulw.moon_rock": "Moon Rock",
   "item.lulw.planet_moon": "Planet Moon Portal Igniter",
-  "fluid.oil": "Oil"
+  "fluid.oil": "Oil",
+  "key.lulw.m": "menu_open"
 }
