--- a/src/main/resources/assets/lulw/lang/en_us.json
+++ b/src/main/resources/assets/lulw/lang/en_us.json
@@ -1,12 +1,12 @@
 {
+  "item.lulw.copper_ingot": "Copper Ingot",
   "biome.lulw.moon": "Moon",
   "block.lulw.moon_dirt": "Moon Dirt",
   "itemGroup.tabspace_mod": "Space ",
-  "block.lulw.copper_ore": "Copper Ore",
-  "fluid.oil": "Oil",
-  "key.lulw.m": "menu_open",
-  "item.lulw.copper_ingot": "Copper Ingot",
   "item.lulw.oil_bucket": "Oil Bucket",
+  "block.lulw.copper_ore": "Copper Ore",
   "block.lulw.moon_rock": "Moon Rock",
-  "item.lulw.planet_moon": "Planet Moon Portal Igniter"
+  "item.lulw.planet_moon": "Planet Moon Portal Igniter",
+  "fluid.oil": "Oil",
+  "key.lulw.m": "menu_open"
 }
