drop z dřevěného uhlí

--- a/src/main/resources/assets/lulw/lang/en_us.json
+++ b/src/main/resources/assets/lulw/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.lulw.copper_ingot": "Copper Ingot",
+  "block.lulw.charcoal_ore": "Charcoal",
   "biome.lulw.moon": "Moon",
   "block.lulw.moon_dirt": "Moon Dirt",
   "itemGroup.tabspace_mod": "Space ",
