--- a/src/main/resources/assets/lulw/lang/en_us.json
+++ b/src/main/resources/assets/lulw/lang/en_us.json
@@ -1,16 +1,17 @@
 {
-  "block.lulw.rubbertreesapling": "RubberTreeSapling",
+  "biome.moon": "Moon",
   "itemGroup.tabspace_mod": "Space ",
-  "block.lulw.moon_dirt": "Moon Dirt",
-  "biome.lulw.moon": "Moon",
-  "block.lulw.copper_ore": "Copper Ore",
-  "block.lulw.uranium_ore": "Uranium Ore",
+  "item.planet_moon": "Planet Moon Portal Igniter",
+  "block.uranium_ore": "Uranium Ore",
+  "key.m": "menu_open",
+  "item.copper_ingot": "Copper Ingot",
   "fluid.oil": "Oil",
-  "key.lulw.m": "menu_open",
-  "item.lulw.copper_ingot": "Copper Ingot",
-  "block.lulw.charcoal_ore": "Charcoal",
-  "item.lulw.oil_bucket": "Oil Bucket",
-  "block.lulw.moon_rock": "Moon Rock",
-  "item.lulw.planet_moon": "Planet Moon Portal Igniter",
-  "block.lulw.rubbertreewood": "Rubbertreewood"
+  "block.copper_ore": "Copper Ore",
+  "item.oil_bucket": "Oil Bucket",
+  "block.rubbertreesapling": "RubberTreeSapling",
+  "block.moon_dirt": "Moon Dirt",
+  "block.moon_rock": "Moon Rock",
+  "block.rubbertreewood": "Rubbertreewood",
+  "block.lulw.rubbertreewood": "Rubbertreewood",
+  "block.charcoal_ore": "Charcoal"
 }
