alfa_of_rubber_tree

--- a/src/main/resources/assets/mechanical_craft/lang/en_us.json
+++ b/src/main/resources/assets/mechanical_craft/lang/en_us.json
@@ -3,14 +3,17 @@
   "biome.lulw.moon": "Moon",
   "block.mechanical_craft.moon_rock": "Moon Rock",
   "block.mechanical_craft.copper_ore": "Copper Ore",
+  "item.mechanical_craft.rezinextraktor": "tree trap",
   "block.mechanical_craft.rubber_leaves": "Rubber Leaves",
   "block.mechanical_craft.charcoal_ore": "Charcoal",
   "item.lulw.copper_ingot": "Copper Ingot",
   "block.mechanical_craft.uranium_ore": "Uranium Ore",
   "block.lulw.rubber_leaves": "Rubber Leaves",
   "block.lulw.moon_rock": "Moon Rock",
+  "block.mechanical_craft.rubberwoodresin": "Rubberwoodresin",
   "block.lulw.rubbertreewood": "Rubber tree wood",
   "item.mechanical_craft.oil_bucket": "Oil Bucket",
+  "item.mechanical_craft.rawrezin": "raw rezin",
   "block.mechanical_craft.moon_dirt": "Moon Dirt",
   "block.mechanical_craft.rubbertreesapling": "Rubber Tree Sapling",
   "item.mechanical_craft.copper_ingot": "Copper Ingot",
