rubber tree beta 1

--- a/src/main/resources/assets/mechanical_craft/lang/en_us.json
+++ b/src/main/resources/assets/mechanical_craft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.lulw.rubbertreesapling": "Rubber Tree Sapling",
+  "block.mechanical_craft.rubberlogstripped": "Rubber_log_stripped",
   "biome.lulw.moon": "Moon",
   "block.mechanical_craft.moon_rock": "Moon Rock",
   "block.mechanical_craft.copper_ore": "Copper Ore",
@@ -10,18 +11,19 @@
   "block.mechanical_craft.uranium_ore": "Uranium Ore",
   "block.lulw.rubber_leaves": "Rubber Leaves",
   "block.lulw.moon_rock": "Moon Rock",
-  "block.mechanical_craft.rubberwoodresin": "Rubberwoodresin",
+  "block.mechanical_craft.rubberwoodresin": "Rubber log resin",
   "block.lulw.rubbertreewood": "Rubber tree wood",
   "item.mechanical_craft.oil_bucket": "Oil Bucket",
   "item.mechanical_craft.rawrezin": "raw rezin",
   "block.mechanical_craft.moon_dirt": "Moon Dirt",
   "block.mechanical_craft.rubbertreesapling": "Rubber Tree Sapling",
+  "block.mechanical_craft.rubberplanks": "Rubber planks",
   "item.mechanical_craft.copper_ingot": "Copper Ingot",
   "block.lulw.moon_dirt": "Moon Dirt",
-  "itemGroup.tabspace_mod": "Space ",
+  "itemGroup.tabspace_mod": "mechanical craft ",
   "block.lulw.copper_ore": "Copper Ore",
   "block.lulw.uranium_ore": "Uranium Ore",
-  "block.mechanical_craft.rubbertreewood": "Rubber tree wood",
+  "block.mechanical_craft.rubbertreewood": "Rubber log",
   "fluid.oil": "Oil",
   "key.lulw.m": "menu_open",
   "item.mechanical_craft.planet_moon": "Planet Moon Portal Igniter",
