rubber_tree_beta 1.2

--- a/src/main/resources/assets/mechanical_craft/lang/en_us.json
+++ b/src/main/resources/assets/mechanical_craft/lang/en_us.json
@@ -1,12 +1,12 @@
 {
   "block.lulw.rubbertreesapling": "Rubber Tree Sapling",
+  "block.mechanical_craft.rubberwoodrezin_2": "Rubber log resin",
   "block.mechanical_craft.rubberlogstripped": "Rubber_log_stripped",
   "biome.lulw.moon": "Moon",
-  "block.mechanical_craft.moon_rock": "Moon Rock",
   "block.mechanical_craft.copper_ore": "Copper Ore",
   "item.mechanical_craft.rezinextraktor": "tree trap",
-  "block.mechanical_craft.rubber_leaves": "Rubber Leaves",
   "block.mechanical_craft.charcoal_ore": "Charcoal",
+  "block.mechanical_craft.rubber_leaves": "Rubber Leaves",
   "item.lulw.copper_ingot": "Copper Ingot",
   "block.mechanical_craft.uranium_ore": "Uranium Ore",
   "block.lulw.rubber_leaves": "Rubber Leaves",
@@ -15,7 +15,6 @@
   "block.lulw.rubbertreewood": "Rubber tree wood",
   "item.mechanical_craft.oil_bucket": "Oil Bucket",
   "item.mechanical_craft.rawrezin": "raw rezin",
-  "block.mechanical_craft.moon_dirt": "Moon Dirt",
   "block.mechanical_craft.rubbertreesapling": "Rubber Tree Sapling",
   "block.mechanical_craft.rubberplanks": "Rubber planks",
   "item.mechanical_craft.copper_ingot": "Copper Ingot",
@@ -23,13 +22,13 @@
   "itemGroup.tabspace_mod": "mechanical craft ",
   "block.lulw.copper_ore": "Copper Ore",
   "block.lulw.uranium_ore": "Uranium Ore",
+  "block.mechanical_craft.rubber_log_stripped_bark": "Rubber_log_stripped",
   "block.mechanical_craft.rubbertreewood": "Rubber log",
   "fluid.oil": "Oil",
   "key.lulw.m": "menu_open",
-  "item.mechanical_craft.planet_moon": "Planet Moon Portal Igniter",
-  "biome.mechanical_craft.moon": "Moon",
   "block.lulw.charcoal_ore": "Charcoal",
   "item.lulw.oil_bucket": "Oil Bucket",
+  "block.mechanical_craft.rubber_tree_bark": "Rubber log",
   "key.mechanical_craft.m": "menu_open",
   "item.lulw.planet_moon": "Planet Moon Portal Igniter"
 }
